[package]
name = "postgres_ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
rand = "0.8.3"
regex = "1.4.5"
bytes = "1.0.1"
byteorder = "1.4.3"
anyhow = "1.0"
crc32c = "0.6.0"
hex = "0.4.3"
lazy_static = "1.4"
log = "0.4.14"
memoffset = "0.6.2"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
zenith_utils = { path = "../zenith_utils" }
workspace_hack = { version = "0.1", path = "../workspace_hack" }

[dev-dependencies]
env_logger = "0.9"
test-log = { version = "0.2.10" }
wal_generate = { path = "wal_generate" }

[build-dependencies]
bindgen = "0.59.1"
