[package]
name = "proxy-cplane-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
clap = { workspace = true, features = ["derive"] }
humantime.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
workspace_hack.workspace = true
