[package]
name = "repro-problem"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-epoll-uring = { path = "../../tokio-epoll-uring/tokio-epoll-uring" }
tokio.workspace = true
camino.workspace = true
utils = {path = "../libs/utils" }
once_cell.workspace = true
tracing.workspace = true
nix.workspace = true
