[package]
name = "s3_scrubber"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-smithy-http.workspace = true
aws-types.workspace = true
reqwest.workspace = true
chrono.workspace = true
either.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
anyhow.workspace = true
hex.workspace = true
thiserror.workspace = true
rand.workspace = true
bytes.workspace = true
bincode.workspace = true
crc32c.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true

atty = "0.2"
tracing-appender = "0.2"