[package]
name = "s3proxy"
version = "0.0.1"
edition = "2024"
license.workspace = true
[dependencies]
anyhow.workspace = true
axum-extra.workspace = true
axum-prometheus.workspace = true
axum.workspace = true
camino.workspace = true
futures.workspace = true
getopts = "0.2.21"
jsonwebtoken.workspace = true
remote_storage.workspace = true
serde.workspace = true
serde_json.workspace = true
sync_wrapper.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
workspace_hack.workspace = true

[dev-dependencies]
http-body-util = "0.1.3"
itertools.workspace = true
parameterized = "2.0.0"
tempfile = "3.19.1"
test-log = "0.2.17"
tower.workspace = true
